--- a/css/addons/unraid/login-page/fallout/terminal.css
+++ b/css/addons/unraid/login-page/fallout/terminal.css
@@ -1,6 +1,6 @@
-@import url(""https://mattstrenk.com/theme.park/css/addons/unraid/login-page/fallout/fallout_base.css");
+@import url("https://mattstrenk.com/theme.park/css/addons/unraid/login-page/fallout/fallout_base.css");
 :root {
-    --main-bg-color: url(/css/addons/unraid/login-page/fallout/wallpaper/terminal.jpg) center center/cover no-repeat fixed;
+    --main-bg-color: url("https://mattstrenk.com/theme.park/css/addons/unraid/login-page/fallout/wallpaper/terminal.jpg") center center/cover no-repeat fixed;
     --logo: url("https://mattstrenk.com/theme.park/css/addons/unraid/login-page/fallout/logo/vault-tec_green.png") center no-repeat;
     --text-color: #14F074;
     --input-color: #14F074;
